automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   }
 }
 
+      document.addEventListener('keydown', function(e) {
+        if (e.which === 37) {
+          moveDodgerLeft()
+        }
+
       function moveDodgerRight() {
   var rightNumbers = dodger.style.right.replace('px', '')
   var right = parseInt(rightNumbers, 10)
@@ -33,9 +38,8 @@
         if (e.which === 37) {
           moveDodgerLeft()
         }
-        if (e.which === 39) {
-          moveDodgerRight()
-        }
+
+
 })
     </script>
   </body>
