--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
     <script>
-      var dodger = document.getElementById('dodger')
-      function moveDodgerLeft() {
+    document.addEventListener('keydown', function(e) {
+  console.log(e.which)
+})
+
+var dodger = document.getElementById('dodger')
+
+function moveDodgerLeft() {
   var leftNumbers = dodger.style.left.replace('px', '')
   var left = parseInt(leftNumbers, 10)
  
@@ -19,27 +24,24 @@
     dodger.style.left = `${left - 1}px`
   }
 }
+document.addEventListener('keydown', function(e) {
+  if (e.which === 37) {
+    moveDodgerLeft()
+  }
+})
 
-      document.addEventListener('keydown', function(e) {
-        if (e.which === 37) {
-          moveDodgerLeft()
-        }
-
-      function moveDodgerRight() {
+function moveDodgerRight() {
   var rightNumbers = dodger.style.right.replace('px', '')
-  var right = parseInt(rightNumbers, 10)
+  var left = parseInt(rightNumbers, 10)
  
-  if (right > 0) {
+  if (left > 0) {
     dodger.style.right = `${right + 1}px`
   }
 }
-
-      document.addEventListener('keydown', function(e) {
-        if (e.which === 39) {
-          moveDodgerRight()
-        }
-
-
+document.addEventListener('keydown', function(e) {
+  if (e.which === 39) {
+    moveDodgerLeft()
+  }
 })
     </script>
   </body>
