--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ function moveDodgerRight() {
   var left = parseInt(rightNumbers, 10)
  
   if (left > 0) {
-    dodger.style.right = `${right + 1}px`
+    dodger.style.right = `${right - 1}px`
   }
 }
 document.addEventListener('keydown', function(e) {
