--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@ function moveDodgerLeft() {
     dodger.style.left = `${left - 1}px`
   }
 }
+
 document.addEventListener('keydown', function(e) {
   if (e.which === 37) {
     moveDodgerLeft()
   }
 })
 
-function moveDodgerRight() {
+function moveDodgerLeft() {
   var rightNumbers = dodger.style.right.replace('px', '')
-  var left = parseInt(rightNumbers, 10)
+  var right = parseInt(rightNumbers, 10)
  
-  if (left > 0) {
-    dodger.style.right = `${right - 1}px`
+  if (right > 0) {
+    dodger.style.right = `${left + 1}px`
   }
 }
+
 document.addEventListener('keydown', function(e) {
   if (e.which === 39) {
     moveDodgerRight()
