automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ document.addEventListener('keydown', function(e) {
   }
 })
 
-function moveDodgerLeft() {
+function moveDodgerRight() {
   var rightNumbers = dodger.style.right.replace('px', '')
   var right = parseInt(rightNumbers, 10)
  
